changed logo font, fixed light/dark mode and added downloadable CV

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,8 @@ body {
   font-family: 'burtons';
   src: url('../../public/Burtons.otf');
 }
+
+@font-face {
+  font-family: 'sharp-grotesk';
+  src: url('../../public/SharpGrotesk-Medium25.otf');
+}
